@@ -97,7 +97,7 @@ system, populate the build/scons/ directory by running:
 
         $ scons build/scons
 
-If you don't have SCons version 0.11 or later already installed on your
+If you don't have SCons version 0.96 or later already installed on your
 system, you can use SCons itself to populate the build/scons/ directory
 with a little more typing:
 
@@ -203,13 +203,13 @@ PACKAGES" section below.
 BUILDING PACKAGES
 =================
 
-We use SCons (version 0.11 or later) to build its own packages.  If you
+We use SCons (version 0.96 or later) to build its own packages.  If you
 already have an appropriate version of SCons installed on your system,
 you can build everything by simply running it:
 
         $ scons
 
-If you don't have SCons version 0.11 or later already installed on your
+If you don't have SCons version 0.96 or later already installed on your
 system, you can build this version of SCons with itself with a little
 more typing:
 
