@@ -3,7 +3,8 @@
 </head>
 <body>
 
-<p>This is the initial web content for your project.  Please customize
+<p>SCons is a next-generation, 
+cross-platform build tool
 this to fit your project.  You dont need to anwser all these questions
 or follow this exact format, but we do like to see this kind of
 information before we approve projects for public viewing.
